# cgull-dev

./: .gitignore  CMakeLists.txt  Promise  PromiseQt  PromiseUV  README.md  conanfile.py  config.no_cmake.h.in
cgull/: common.h  common.hpp  function_traits.h  handler.h  handlers.cpp  init.cpp  memory.h  memory.hpp  promise.h  promise.hpp  promise_private.h  promise_private.hpp  std_thread_handler.h  sync_handler.h
include/cgull/: async.h  cgull.h  common.h  config.h  handler.h  platform_detection.h  promise.h  promise.hpp  promise_private.h
include/cgull/guts/: function_traits.h  shared_data.h
tests/: main.cpp  tests.h
